--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Streamlit==1.43.2
-NumPy==2.0.2
-Pandas==2.2.2
-Matplotlib==3.10.0
-Seaborn==0.13.2
+streamlit==1.43.2
+numpy==2.0.2
+pandas==2.2.2
+matplotlib==3.10.0
+seaborn==0.13.2
 plotly==6.0.0
