--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.43.2
-numpy==2.0.2
-pandas==2.2.2
-matplotlib==3.10.0
+streamlit==1.43.1
+numpy==1.26.4
+pandas==2.2.3
+matplotlib==3.9.2
 seaborn==0.13.2
-plotly==6.0.0
+setuptools==68.2.2
