--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.43.1
-numpy==1.26.4
-pandas==2.2.3
-matplotlib==3.9.2
-seaborn==0.13.2
-setuptools==68.2.2
+Streamlit==1.43.2
+NumPy==2.0.2
+Pandas==2.2.2
+Matplotlib==3.10.0
+Seaborn==0.13.2
+plotly==6.0.0
